Fixes height of title banner on mobiles (again!)

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ nav a, nav a:active, nav a:hover, nav a:visited, nav a:focus{
 header {
   width: 100%;
   max-width: 1002px;
-  margin: 80px auto 20px;
+  margin: 100px auto 20px;
   padding-top: 80px;
   text-align: center;
   background-color: #00a8a8;
